--- a/config.yml
+++ b/config.yml
@@ -2,3 +2,5 @@ EXT_IP: 13.250.98.136
 VALIDATOR_MNEMONIC: crazy smile now spring false matrix pull aunt suspect acid goddess salad fire weapon twin annual unhappy fit harbor rifle sentence human quote gown
 VALIDATOR_WITHDRAW_ADDRESS: 0x943fA1E47Df2759244A85cDb49370F5f5812D74D
 VALIDATOR_MINER_FEE_ADDRESS: 0x943fA1E47Df2759244A85cDb49370F5f5812D74D
+HEART_BEAT: https://testwalletapi.orex.work/api/common/v1/ping
+PEER_IP_LIST: 13.250.64.220,52.76.172.102,13.250.98.136
