--- a/consensus-docker-base/resources/config.yml
+++ b/consensus-docker-base/resources/config.yml
@@ -18,7 +18,7 @@ CAPELLA_FORK_EPOCH: 0
 CAPELLA_FORK_VERSION: 0x20000092
 MAX_WITHDRAWALS_PER_PAYLOAD: 16
 MAX_EFFECTIVE_BALANCE: 1024000000000  #gwei
-
+EJECTION_BALANCE: 1000000000000
 DENEB_FORK_VERSION: 0x20000093
 
 # Time parameters
