--- a/consensus-docker-base/resources/config.yml
+++ b/consensus-docker-base/resources/config.yml
@@ -31,3 +31,5 @@ ETH1_FOLLOW_DISTANCE: 2
 EPOCHS_PER_ETH1_VOTING_PERIOD: 1
 # Deposit contract
 DEPOSIT_CONTRACT_ADDRESS: 0x3e839677d23d9b7b0df00ed0c67750aa6412b75d
+SYNC_COMMITTEE_SUBNET_COUNT: 1
+ATTESTATION_SUBNET_COUNT: 1
